prediction score and points